--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,3 @@
-node_modules/
-.env
-
 # Python
 __pycache__/
 *.pyc
@@ -8,18 +5,13 @@ __pycache__/
 *.pyd
 .venv/
 venv/
+.env
 
-# Backend logs
-backend/logs/
+# Logs
+logs/
 *.log
 
 # OS cruft
 .DS_Store
 Thumbs.db
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
