--- a/sdk/python-wrapper/pyproject.toml
+++ b/sdk/python-wrapper/pyproject.toml
@@ -8,7 +8,8 @@ version = "1.0.0"
 description = "Semantis Cache - Semantic Caching SDK for LLM Applications"
 readme = "README.md"
 requires-python = ">=3.10"
-license = {text = "MIT"}
+license = "MIT"
+license-files = ["LICENSE"]
 authors = [
     {name = "Semantis AI", email = "support@semantis.ai"}
 ]
@@ -16,7 +17,6 @@ keywords = ["semantic caching", "llm", "openai", "cache", "ai", "semantic search
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
