--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,21 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "keywords": ["semantic-caching", "llm", "ai"],
+  "keywords": [
+    "semantic-caching",
+    "llm",
+    "ai"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
